ext page images no longer stretched by width: 100%

--- a/less/com/ext.less
+++ b/less/com/ext.less
@@ -12,7 +12,7 @@
     font-family: @font-family-sans-serif;
   }
   .ext-img {
-    width: 100%;
+    max-width: 100%;
     padding: 0;
     border-top: 1px solid #999;
   }
